show all correlations

--- a/5.validate_model/cell_health_correlations.ipynb
+++ b/5.validate_model/cell_health_correlations.ipynb
@@ -24,7 +24,7 @@
     "from scipy.spatial.distance import squareform\n",
     "\n",
     "sys.path.append(\"../utils\")\n",
-    "import validate_utils\n"
+    "import validate_utils"
    ]
   },
   {
@@ -40,7 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# external path to be set\n",
+    "# SET `classification_profiles_save_dir` BELOW\n",
+    "# We used an external harddrive and therefore needed to use specific paths\n",
     "classification_profiles_save_dir = pathlib.Path(\n",
     "    \"/media/roshankern/63af2010-c376-459e-a56e-576b170133b6/data/cell-health-plate-classification-profiles\"\n",
     ")\n",
@@ -53,7 +54,7 @@
     ")\n",
     "\n",
     "tidy_long_corrs_save_dir = pathlib.Path(\"validations\")\n",
-    "tidy_long_corrs_save_dir.mkdir(exist_ok=True, parents=True)\n"
+    "tidy_long_corrs_save_dir.mkdir(exist_ok=True, parents=True)"
    ]
   },
   {
@@ -500,7 +501,7 @@
     "cell_health_labels_link = f\"https://raw.github.com/broadinstitute/cell-health/{cell_health_hash}/1.generate-profiles/data/consensus/cell_health_median.tsv.gz\"\n",
     "\n",
     "cell_health_labels = pd.read_csv(cell_health_labels_link, compression=\"gzip\", sep=\"\\t\")\n",
-    "cell_health_labels"
+    "cell_health_labels\n"
    ]
   },
   {
@@ -714,7 +715,6 @@
     "# list for compiling tidy long correlation data\n",
     "compiled_tidy_long_corrs = []\n",
     "for classification_profiles_path in MCM_classification_profiles_save_dir.iterdir():\n",
-    "\n",
     "    # get information about the current model\n",
     "    model_type = classification_profiles_path.name.split(\"__\")[0]\n",
     "    feature_type = classification_profiles_path.name.split(\"__\")[1]\n",
@@ -752,7 +752,7 @@
     ")\n",
     "\n",
     "# preview tidy data\n",
-    "compiled_tidy_long_corrs"
+    "compiled_tidy_long_corrs\n"
    ]
   },
   {
@@ -1051,7 +1051,6 @@
     "compiled_tidy_long_corrs = []\n",
     "for phenotypic_class_path in SCM_classification_profiles_save_dir.iterdir():\n",
     "    for classification_profiles_path in phenotypic_class_path.iterdir():\n",
-    "\n",
     "        # get information about the current model\n",
     "        phenotypic_class = phenotypic_class_path.name\n",
     "        model_type = classification_profiles_path.name.split(\"__\")[0]\n",
@@ -1092,7 +1091,7 @@
     ")\n",
     "\n",
     "# preview tidy data\n",
-    "compiled_tidy_long_corrs"
+    "compiled_tidy_long_corrs\n"
    ]
   }
  ],
