update single class docs

--- a/3.evaluate_model/class_PR_curves.ipynb
+++ b/3.evaluate_model/class_PR_curves.ipynb
@@ -24,7 +24,7 @@
     "sys.path.append(\"../utils\")\n",
     "from split_utils import get_features_data\n",
     "from train_utils import get_dataset\n",
-    "from evaluate_utils import class_PR_curves, class_PR_curves_SCM\n"
+    "from evaluate_utils import class_PR_curves, class_PR_curves_SCM"
    ]
   },
   {
@@ -44,7 +44,7 @@
     "data_split_path = pathlib.Path(\"../1.split_data/indexes/data_split_indexes.tsv\")\n",
     "data_split_indexes = pd.read_csv(data_split_path, sep=\"\\t\", index_col=0)\n",
     "features_dataframe_path = pathlib.Path(\"../0.download_data/data/labeled_data.csv.gz\")\n",
-    "features_dataframe = get_features_data(features_dataframe_path)"
+    "features_dataframe = get_features_data(features_dataframe_path)\n"
    ]
   },
   {
@@ -329,7 +329,7 @@
     "        PR_data[\"feature_type\"] = feature_type\n",
     "\n",
     "        # add this score data to the tidy scores compiling list\n",
-    "        compiled_class_PR_curves.append(PR_data)"
+    "        compiled_class_PR_curves.append(PR_data)\n"
    ]
   },
   {
@@ -545,14 +545,14 @@
     "compiled_class_PR_curves.to_csv(compiled_PR_data_save_path, sep=\"\\t\")\n",
     "\n",
     "# preview tidy data\n",
-    "compiled_class_PR_curves"
+    "compiled_class_PR_curves\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Evaluate each model on each dataset (multiclass)\n"
+    "### Evaluate each model on each dataset (single class)\n"
    ]
   },
   {
@@ -618,7 +618,6 @@
     "    for feature_type, evaluation_type, phenotypic_class in itertools.product(\n",
     "        feature_types, evaluation_types, phenotypic_classes\n",
     "    ):\n",
-    "\n",
     "        # load single class model for this combination of model type, feature type, and phenotypic class\n",
     "        single_class_model_path = pathlib.Path(\n",
     "            f\"{single_class_models_dir}/{phenotypic_class}_models/{model_type}__{feature_type}.joblib\"\n",
@@ -658,7 +657,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Save PR curves from each evaluation (multiclass)\n"
+    "### Save PR curves from each evaluation (single class)\n"
    ]
   },
   {
@@ -865,7 +864,7 @@
     "compiled_SCM_PR_data.to_csv(compiled_PR_data_save_path, sep=\"\\t\")\n",
     "\n",
     "# preview tidy data\n",
-    "compiled_SCM_PR_data"
+    "compiled_SCM_PR_data\n"
    ]
   }
  ],
