--- a/3.evaluate_model/get_LOIO_probabilities.ipynb
+++ b/3.evaluate_model/get_LOIO_probabilities.ipynb
@@ -29,7 +29,7 @@
     "sys.path.append(\"../utils\")\n",
     "from split_utils import get_features_data\n",
     "from train_utils import get_X_y_data\n",
-    "from evaluate_utils import get_SCM_model_data\n"
+    "from evaluate_utils import get_SCM_model_data"
    ]
   },
   {
@@ -286,7 +286,7 @@
     "\n",
     "# preview labeled data\n",
     "print(labeled_data.shape)\n",
-    "labeled_data.head(5)\n"
+    "labeled_data.head(5)"
    ]
   },
   {
@@ -305,14 +305,14 @@
    "source": [
     "# see number of images to\n",
     "num_images = labeled_data[\"Metadata_DNA\"].unique().shape[0]\n",
-    "print(f\"There are {num_images} images to perform LOIO evaluation on per model.\")"
+    "print(f\"There are {num_images} images to perform LOIO evaluation on per model.\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get LOIO probabilities\n"
+    "### Get LOIO probabilities (multi class models)\n"
    ]
   },
   {
@@ -406,14 +406,14 @@
     "        test_cells_wide_data = pd.concat([metadata_dataframe, probas_dataframe], axis=1)\n",
     "\n",
     "        # add tidy long data to compiled data\n",
-    "        compiled_LOIO_wide_data.append(test_cells_wide_data)"
+    "        compiled_LOIO_wide_data.append(test_cells_wide_data)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Format and save LOIO probabilities\n"
+    "### Format and save LOIO probabilities (multi class models)\n"
    ]
   },
   {
@@ -657,7 +657,7 @@
     "compiled_LOIO_tidy_long_data.to_csv(compiled_LOIO_save_path, sep=\"\\t\")\n",
     "\n",
     "# preview tidy long data\n",
-    "compiled_LOIO_tidy_long_data"
+    "compiled_LOIO_tidy_long_data\n"
    ]
   },
   {
@@ -819,14 +819,14 @@
     "        test_cells_wide_data = pd.concat([metadata_dataframe, probas_dataframe], axis=1)\n",
     "\n",
     "        # add tidy long data to compiled data\n",
-    "        compiled_LOIO_wide_data.append(test_cells_wide_data)"
+    "        compiled_LOIO_wide_data.append(test_cells_wide_data)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Format and save LOIO probabilities\n"
+    "### Format and save LOIO probabilities (single class models)\n"
    ]
   },
   {
@@ -1082,7 +1082,7 @@
     "compiled_LOIO_tidy_long_data.to_csv(compiled_LOIO_save_path, sep=\"\\t\")\n",
     "\n",
     "# preview tidy long data\n",
-    "compiled_LOIO_tidy_long_data\n"
+    "compiled_LOIO_tidy_long_data"
    ]
   }
  ],
