--- a/3.evaluate_model/get_model_predictions.ipynb
+++ b/3.evaluate_model/get_model_predictions.ipynb
@@ -25,7 +25,7 @@
     "sys.path.append(\"../utils\")\n",
     "from split_utils import get_features_data\n",
     "from train_utils import get_dataset, get_X_y_data\n",
-    "from evaluate_utils import get_SCM_model_data\n"
+    "from evaluate_utils import get_SCM_model_data"
    ]
   },
   {
@@ -45,14 +45,14 @@
     "data_split_path = pathlib.Path(\"../1.split_data/indexes/data_split_indexes.tsv\")\n",
     "data_split_indexes = pd.read_csv(data_split_path, sep=\"\\t\", index_col=0)\n",
     "features_dataframe_path = pathlib.Path(\"../0.download_data/data/labeled_data.csv.gz\")\n",
-    "features_dataframe = get_features_data(features_dataframe_path)"
+    "features_dataframe = get_features_data(features_dataframe_path)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get Each Model Predictions on Each Dataset (Multi Class Models)\n"
+    "### Get Each Model Predictions on Each Dataset (multi class models)\n"
    ]
   },
   {
@@ -125,14 +125,14 @@
     "            }\n",
     "        )\n",
     "\n",
-    "        compiled_predictions.append(predictions_df)\n"
+    "        compiled_predictions.append(predictions_df)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Compile and Save Predictions\n"
+    "### Compile and Save Predictions (multi class models)\n"
    ]
   },
   {
@@ -321,14 +321,14 @@
     "compiled_predictions.to_csv(compiled_predictions_save_path, sep=\"\\t\")\n",
     "\n",
     "# preview compiled predictions\n",
-    "compiled_predictions"
+    "compiled_predictions\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get Each Model Predictions on Each Dataset (Single Class Models)\n"
+    "### Get Each Model Predictions on Each Dataset (single class models)\n"
    ]
   },
   {
@@ -577,14 +577,14 @@
     "        }\n",
     "    )\n",
     "\n",
-    "    compiled_predictions.append(predictions_df)"
+    "    compiled_predictions.append(predictions_df)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Compile and Save Predictions\n"
+    "### Compile and Save Predictions (single class models)\n"
    ]
   },
   {
@@ -775,7 +775,7 @@
     "compiled_predictions.to_csv(compiled_predictions_save_path, sep=\"\\t\")\n",
     "\n",
     "# preview compiled predictions\n",
-    "compiled_predictions"
+    "compiled_predictions\n"
    ]
   }
  ],
