respond to Jenna PR comments

--- a/7.figures/Figure2_UMAP_and_Correlation.ipynb
+++ b/7.figures/Figure2_UMAP_and_Correlation.ipynb
@@ -32,6 +32,8 @@
     "suppressPackageStartupMessages(library(dplyr))\n",
     "suppressPackageStartupMessages(library(ggplot2))\n",
     "suppressPackageStartupMessages(library(patchwork))\n",
+    "\n",
+    "# Load variables important for plotting (e.g., themes, phenotypes, etc.)\n",
     "source(\"themes.r\")"
    ]
   },
@@ -150,8 +152,11 @@
     "        Embedding_Value = \"d\"\n",
     "    )\n",
     ") %>%\n",
-    "    dplyr::select(!...1) %>%#7570b3\n",
+    "    dplyr::select(!...1) %>%\n",
+    "    # Wrangle UMAP columns for scatter plot\n",
     "    tidyr::pivot_wider(names_from = UMAP_Embedding, values_from = Embedding_Value) %>%\n",
+    "    # Generate a new column that we will use for plotting\n",
+    "    # Note, we define focus_phenotypes in themes.r\n",
     "    dplyr::mutate(Mitocheck_Plot_Label = if_else(\n",
     "        Mitocheck_Phenotypic_Class %in% focus_phenotypes,\n",
     "        Mitocheck_Phenotypic_Class,\n",
