add comment describing balance arg

--- a/2.train_model/train_multi_class_models.ipynb
+++ b/2.train_model/train_multi_class_models.ipynb
@@ -624,6 +624,7 @@
     "\n",
     "# train model on each combination of model type, feature type, and balance type\n",
     "for balance in balanced_types:\n",
+    "    # Set sklearn class_weight parameter for balanced or unbalanced models\n",
     "    if balance == \"balanced\":\n",
     "        balance_model = \"balanced\"\n",
     "    else:\n",
@@ -714,7 +715,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.10"
   },
   "vscode": {
    "interpreter": {
