--- a/2.train_model/train_multi_class_models.ipynb
+++ b/2.train_model/train_multi_class_models.ipynb
@@ -36,6 +36,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "warnings.simplefilter(\"ignore\", category=ConvergenceWarning)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -44,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +465,7 @@
        "[2432 rows x 1450 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -500,35 +509,105 @@
      "text": [
       "Parameters being tested during grid search: {'C': array([1.e-03, 1.e-02, 1.e-01, 1.e+00, 1.e+01, 1.e+02, 1.e+03]), 'l1_ratio': array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])}\n",
       "\n",
-      "Training final model on CP features...\n",
+      "Training final balanced model on CP features with zernike only False or area features only False...\n",
+      "X has shape (2432, 157), y has shape (2432,)\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 0.8}\n",
+      "Score of best estimator: 0.7909959459932518\n",
+      "\n",
+      "Training final balanced model on DP features with zernike only False or area features only False...\n",
+      "X has shape (2432, 1280), y has shape (2432,)\n",
+      "Best parameters: {'C': 10.0, 'l1_ratio': 0.5}\n",
+      "Score of best estimator: 0.7377136168480416\n",
+      "\n",
+      "Training final balanced model on CP_and_DP features with zernike only False or area features only False...\n",
+      "X has shape (2432, 1437), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.30000000000000004}\n",
+      "Score of best estimator: 0.8336028672433612\n",
+      "\n",
+      "Training final balanced model on CP_zernike_only features with zernike only True or area features only False...\n",
+      "X has shape (2432, 30), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.30000000000000004}\n",
+      "Score of best estimator: 0.32973728928206814\n",
+      "\n",
+      "Training final balanced model on CP_areashape_only features with zernike only False or area features only True...\n",
+      "X has shape (2432, 55), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.4}\n",
+      "Score of best estimator: 0.4550582804938867\n",
+      "\n",
+      "Training shuffled_baseline balanced model on CP features with zernike only False or area features only False...\n",
+      "X has shape (2432, 157), y has shape (2432,)\n",
+      "Best parameters: {'C': 10.0, 'l1_ratio': 0.2}\n",
+      "Score of best estimator: 0.06563923718788009\n",
+      "\n",
+      "Training shuffled_baseline balanced model on DP features with zernike only False or area features only False...\n",
+      "X has shape (2432, 1280), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.2}\n",
+      "Score of best estimator: 0.09950430817240875\n",
+      "\n",
+      "Training shuffled_baseline balanced model on CP_and_DP features with zernike only False or area features only False...\n",
+      "X has shape (2432, 1437), y has shape (2432,)\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 1.0}\n",
+      "Score of best estimator: 0.09960774154910071\n",
+      "\n",
+      "Training shuffled_baseline balanced model on CP_zernike_only features with zernike only True or area features only False...\n",
+      "X has shape (2432, 30), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.01, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.06115068716828923\n",
+      "\n",
+      "Training shuffled_baseline balanced model on CP_areashape_only features with zernike only False or area features only True...\n",
+      "X has shape (2432, 55), y has shape (2432,)\n",
+      "Best parameters: {'C': 100.0, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.06401278098370283\n",
+      "\n",
+      "Training final unbalanced model on CP features with zernike only False or area features only False...\n",
       "X has shape (2432, 157), y has shape (2432,)\n",
       "Best parameters: {'C': 10.0, 'l1_ratio': 0.2}\n",
       "Score of best estimator: 0.814474832382009\n",
       "\n",
-      "Training final model on DP features...\n",
+      "Training final unbalanced model on DP features with zernike only False or area features only False...\n",
       "X has shape (2432, 1280), y has shape (2432,)\n",
       "Best parameters: {'C': 1.0, 'l1_ratio': 1.0}\n",
       "Score of best estimator: 0.7383705853823289\n",
       "\n",
-      "Training final model on CP_and_DP features...\n",
+      "Training final unbalanced model on CP_and_DP features with zernike only False or area features only False...\n",
       "X has shape (2432, 1437), y has shape (2432,)\n",
       "Best parameters: {'C': 0.1, 'l1_ratio': 0.30000000000000004}\n",
       "Score of best estimator: 0.8348844749097128\n",
       "\n",
-      "Training shuffled_baseline model on CP features...\n",
+      "Training final unbalanced model on CP_zernike_only features with zernike only True or area features only False...\n",
+      "X has shape (2432, 30), y has shape (2432,)\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 1.0}\n",
+      "Score of best estimator: 0.3716338098380602\n",
+      "\n",
+      "Training final unbalanced model on CP_areashape_only features with zernike only False or area features only True...\n",
+      "X has shape (2432, 55), y has shape (2432,)\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 1.0}\n",
+      "Score of best estimator: 0.4736043362663639\n",
+      "\n",
+      "Training shuffled_baseline unbalanced model on CP features with zernike only False or area features only False...\n",
       "X has shape (2432, 157), y has shape (2432,)\n",
-      "Best parameters: {'C': 0.1, 'l1_ratio': 0.30000000000000004}\n",
-      "Score of best estimator: 0.10104514628410396\n",
+      "Best parameters: {'C': 0.01, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.09523646925959994\n",
       "\n",
-      "Training shuffled_baseline model on DP features...\n",
+      "Training shuffled_baseline unbalanced model on DP features with zernike only False or area features only False...\n",
       "X has shape (2432, 1280), y has shape (2432,)\n",
-      "Best parameters: {'C': 0.1, 'l1_ratio': 1.0}\n",
-      "Score of best estimator: 0.10077527791551757\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 0.8}\n",
+      "Score of best estimator: 0.09335075120940653\n",
       "\n",
-      "Training shuffled_baseline model on CP_and_DP features...\n",
+      "Training shuffled_baseline unbalanced model on CP_and_DP features with zernike only False or area features only False...\n",
       "X has shape (2432, 1437), y has shape (2432,)\n",
-      "Best parameters: {'C': 0.1, 'l1_ratio': 0.1}\n",
-      "Score of best estimator: 0.10170801022131686\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.8}\n",
+      "Score of best estimator: 0.10299042013157059\n",
+      "\n",
+      "Training shuffled_baseline unbalanced model on CP_zernike_only features with zernike only True or area features only False...\n",
+      "X has shape (2432, 30), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.2}\n",
+      "Score of best estimator: 0.09595057252257086\n",
+      "\n",
+      "Training shuffled_baseline unbalanced model on CP_areashape_only features with zernike only False or area features only True...\n",
+      "X has shape (2432, 55), y has shape (2432,)\n",
+      "Best parameters: {'C': 100.0, 'l1_ratio': 0.1}\n",
+      "Score of best estimator: 0.10327638131102379\n",
       "\n"
      ]
     }
@@ -536,67 +615,93 @@
    "source": [
     "# specify model types and feature types\n",
     "model_types = [\"final\", \"shuffled_baseline\"]\n",
-    "feature_types = [\"CP\", \"DP\", \"CP_and_DP\"]\n",
-    "\n",
-    "# create stratified data sets for k-fold cross validation\n",
-    "straified_k_folds = StratifiedKFold(n_splits=10, shuffle=False)\n",
-    "\n",
-    "# create logistic regression model with following parameters\n",
-    "log_reg_model = LogisticRegression(\n",
-    "    penalty=\"elasticnet\", solver=\"saga\", max_iter=100, n_jobs=-1, random_state=0\n",
-    ")\n",
+    "feature_types = [\"CP\", \"DP\", \"CP_and_DP\", \"CP_zernike_only\", \"CP_areashape_only\"]\n",
+    "balanced_types = [\"balanced\", \"unbalanced\"]\n",
     "\n",
     "# specify parameters to tune for\n",
     "parameters = {\"C\": np.logspace(-3, 3, 7), \"l1_ratio\": np.linspace(0, 1, 11)}\n",
     "print(f\"Parameters being tested during grid search: {parameters}\\n\")\n",
     "\n",
-    "# create grid search with cross validation with hypertuning params\n",
-    "grid_search_cv = GridSearchCV(\n",
-    "    log_reg_model,\n",
-    "    parameters,\n",
-    "    cv=straified_k_folds,\n",
-    "    n_jobs=-1,\n",
-    "    scoring=\"f1_weighted\",\n",
-    ")\n",
-    "\n",
-    "# train model on each combination of model type and feature type\n",
-    "for model_type in model_types:\n",
-    "    for feature_type in feature_types:\n",
-    "        print(f\"Training {model_type} model on {feature_type} features...\")\n",
-    "\n",
-    "        X, y = get_X_y_data(training_data, feature_type)\n",
-    "        print(f\"X has shape {X.shape}, y has shape {y.shape}\")\n",
-    "\n",
-    "        # shuffle columns of X (features) dataframe independently to create shuffled baseline\n",
-    "        if model_type == \"shuffled_baseline\":\n",
-    "            for column in X.T:\n",
-    "                np.random.shuffle(column)\n",
-    "\n",
-    "        # fit grid search cv to X and y data\n",
-    "        # capture convergence warning from sklearn\n",
-    "        # this warning does not affect the model but takes up lots of space in the output\n",
-    "        with parallel_backend(\"multiprocessing\"):\n",
-    "            with warnings.catch_warnings():\n",
-    "                warnings.filterwarnings(\n",
-    "                    \"ignore\", category=ConvergenceWarning, module=\"sklearn\"\n",
+    "# train model on each combination of model type, feature type, and balance type\n",
+    "for balance in balanced_types:\n",
+    "    # Set sklearn class_weight parameter for balanced or unbalanced models\n",
+    "    if balance == \"balanced\":\n",
+    "        balance_model = \"balanced\"\n",
+    "    else:\n",
+    "        balance_model = None\n",
+    "        \n",
+    "    for model_type in model_types:\n",
+    "        for feature_type in feature_types:\n",
+    "            \n",
+    "            if feature_type == \"CP_zernike_only\":\n",
+    "                zernike_only = True\n",
+    "                dataset = \"CP\"\n",
+    "            else:\n",
+    "                zernike_only = False\n",
+    "                dataset = feature_type\n",
+    "                \n",
+    "            if feature_type == \"CP_areashape_only\":\n",
+    "                area_shape_only = True\n",
+    "                dataset = \"CP\"\n",
+    "            else:\n",
+    "                area_shape_only = False\n",
+    "    \n",
+    "            print(f\"Training {model_type} {balance} model on {feature_type} features with zernike only {zernike_only} or area features only {area_shape_only}...\")\n",
+    "            \n",
+    "            X, y = get_X_y_data(\n",
+    "                training_data,\n",
+    "                dataset,\n",
+    "                zernike_only,\n",
+    "                area_shape_only\n",
+    "            )\n",
+    "    \n",
+    "            print(f\"X has shape {X.shape}, y has shape {y.shape}\")\n",
+    "    \n",
+    "            # shuffle columns of X (features) dataframe independently to create shuffled baseline\n",
+    "            if model_type == \"shuffled_baseline\":\n",
+    "                for column in X.T:\n",
+    "                    np.random.shuffle(column)\n",
+    "    \n",
+    "            # fit grid search cv to X and y data\n",
+    "            with parallel_backend(\"multiprocessing\"):\n",
+    "                # create stratified data sets for k-fold cross validation\n",
+    "                straified_k_folds = StratifiedKFold(n_splits=10, shuffle=False)\n",
+    "                \n",
+    "                # create logistic regression model with following parameters\n",
+    "                log_reg_model = LogisticRegression(\n",
+    "                    penalty=\"elasticnet\",\n",
+    "                    solver=\"saga\",\n",
+    "                    class_weight=balance_model,\n",
+    "                    max_iter=100,\n",
+    "                    n_jobs=-1,\n",
+    "                    random_state=0\n",
+    "                )\n",
+    "                \n",
+    "                # create grid search with cross validation with hypertuning params\n",
+    "                grid_search_cv = GridSearchCV(\n",
+    "                    log_reg_model,\n",
+    "                    parameters,\n",
+    "                    cv=straified_k_folds,\n",
+    "                    n_jobs=-1,\n",
+    "                    scoring=\"f1_weighted\",\n",
     "                )\n",
     "                grid_search_cv = grid_search_cv.fit(X, y)\n",
-    "\n",
-    "        # print info for best estimator\n",
-    "        print(f\"Best parameters: {grid_search_cv.best_params_}\")\n",
-    "        print(f\"Score of best estimator: {grid_search_cv.best_score_}\\n\")\n",
-    "\n",
-    "        # save final estimator\n",
-    "        dump(\n",
-    "            grid_search_cv.best_estimator_,\n",
-    "            f\"{results_dir}/{model_type}__{feature_type}.joblib\",\n",
-    "        )"
+    "    \n",
+    "            # print info for best estimator\n",
+    "            print(f\"Best parameters: {grid_search_cv.best_params_}\")\n",
+    "            print(f\"Score of best estimator: {grid_search_cv.best_score_}\\n\")\n",
+    "    \n",
+    "            # save final estimator\n",
+    "            dump(\n",
+    "                grid_search_cv.best_estimator_,\n",
+    "                f\"{results_dir}/{model_type}__{feature_type}__{balance}.joblib\",\n",
+    "            )"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('phenotypic_profiling')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -610,9 +715,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.10"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "f9df586d1764dbc68785000a153dad1832127ac564b5e2e4c94e83fc43160b30"
@@ -620,5 +724,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
