move to preset variables in themes.r

--- a/7.figures/Figure3_model_evaluation.ipynb
+++ b/7.figures/Figure3_model_evaluation.ipynb
@@ -185,18 +185,76 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'CellProfiler'</li><li>'DeepProfiler'</li><li>'CP and DP'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'CellProfiler'\n",
+       "\\item 'DeepProfiler'\n",
+       "\\item 'CP and DP'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'CellProfiler'\n",
+       "2. 'DeepProfiler'\n",
+       "3. 'CP and DP'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"CellProfiler\" \"DeepProfiler\" \"CP and DP\"   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'CP Zernike'</li><li>'CP AreaShape'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'CP Zernike'\n",
+       "\\item 'CP AreaShape'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'CP Zernike'\n",
+       "2. 'CP AreaShape'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"CP Zernike\"   \"CP AreaShape\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "focus_feature_spaces <- c(\n",
-    "    \"CellProfiler\",\n",
-    "    \"DeepProfiler\",\n",
-    "    \"CP and DP\"\n",
-    ")\n",
+    "# Feature spaces to subset\n",
+    "# Note: facet_labels and feature_spaces defined in `themes.r`\n",
+    "focus_feature_spaces <- paste(facet_labels)\n",
+    "focus_feature_spaces\n",
     "\n",
-    "subset_feature_spaces <- c(\n",
-    "    \"CP Zernike\",\n",
-    "    \"CP AreaShape\"\n",
-    ")"
+    "subset_feature_spaces <- paste(feature_spaces[!(paste(feature_spaces) %in% focus_feature_spaces)])\n",
+    "subset_feature_spaces"
    ]
   },
   {
