--- a/7.figures/precision_recall_curves.ipynb
+++ b/7.figures/precision_recall_curves.ipynb
@@ -51,14 +51,44 @@
    "execution_count": 3,
    "id": "ca61f174-9a9b-4e36-b9c5-d998f6c2ca8d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'CellProfiler'</li><li>'DeepProfiler'</li><li>'CP and DP'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'CellProfiler'\n",
+       "\\item 'DeepProfiler'\n",
+       "\\item 'CP and DP'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'CellProfiler'\n",
+       "2. 'DeepProfiler'\n",
+       "3. 'CP and DP'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"CellProfiler\" \"DeepProfiler\" \"CP and DP\"   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Feature spaces to subset\n",
-    "focus_feature_spaces <- c(\n",
-    "    \"CellProfiler\",\n",
-    "    \"DeepProfiler\",\n",
-    "    \"CP and DP\"\n",
-    ")"
+    "# Note: facet_labels defined in `themes.r`\n",
+    "focus_feature_spaces <- paste(facet_labels)\n",
+    "focus_feature_spaces"
    ]
   },
   {
