software gardening in response to PR comments

--- a/3.evaluate_model/get_LOIO_probabilities_all_featurespaces_no_retraining.ipynb
+++ b/3.evaluate_model/get_LOIO_probabilities_all_featurespaces_no_retraining.ipynb
@@ -1,16 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Load Libraries\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import pathlib\n",
@@ -23,10 +18,6 @@
     "from joblib import load\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import (\n",
-    "    StratifiedKFold,\n",
-    "    GridSearchCV,\n",
-    ")\n",
     "from sklearn.utils import parallel_backend\n",
     "from sklearn.exceptions import ConvergenceWarning\n",
     "from sklearn.metrics import f1_score\n",
@@ -433,23 +424,6 @@
     "        if model_type == \"shuffled_baseline\":\n",
     "            for column in X_train.T:\n",
     "                np.random.shuffle(column)\n",
-    "\n",
-    "        # Setup grid search logic\n",
-    "        straified_k_folds = StratifiedKFold(n_splits=10, shuffle=False)\n",
-    "        \n",
-    "        # create logistic regression model with following parameters\n",
-    "        log_reg_model = LogisticRegression(\n",
-    "            penalty=\"elasticnet\", solver=\"saga\", max_iter=100, n_jobs=-1, random_state=0\n",
-    "        )\n",
-    "\n",
-    "        # create grid search with cross validation with hypertuning params\n",
-    "        grid_search_cv = GridSearchCV(\n",
-    "            log_reg_model,\n",
-    "            parameters,\n",
-    "            cv=straified_k_folds,\n",
-    "            n_jobs=-1,\n",
-    "            scoring=\"f1_weighted\",\n",
-    "        )\n",
     "\n",
     "        # capture convergence warning from sklearn\n",
     "        # this warning does not affect the model but takes up lots of space in the output\n",
@@ -1245,7 +1219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.8.13"
   },
   "vscode": {
    "interpreter": {
