rename saved labeled data

--- a/0.download_data/download_data.ipynb
+++ b/0.download_data/download_data.ipynb
@@ -68,7 +68,7 @@
     "    labeled_data = pd.read_csv(labeled_data_load_path, compression=\"gzip\", index_col=0)\n",
     "    \n",
     "    # save data\n",
-    "    labeled_data_save_path = pathlib.Path(f\"{labeled_data_save_dir}/training_data__{data_type}.csv.gz\")\n",
+    "    labeled_data_save_path = pathlib.Path(f\"{labeled_data_save_dir}/labeled_data__{data_type}.csv.gz\")\n",
     "    labeled_data.to_csv(labeled_data_save_path, compression=\"gzip\")"
    ]
   },
