update running model code

--- a/2.train_model/train_multi_class_models.ipynb
+++ b/2.train_model/train_multi_class_models.ipynb
@@ -123,7 +123,441 @@
       "Feature Type: CP \n",
       "Balance Type: balanced \n",
       "Dataset Type: ic\n",
-      "X has shape (2432, 157), y has shape (2432,)\n"
+      "X has shape (2432, 157), y has shape (2432,)\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 0.8}\n",
+      "Score of best estimator: 0.7909959459932518\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/final__CP__balanced__ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: final \n",
+      "Feature Type: CP \n",
+      "Balance Type: balanced \n",
+      "Dataset Type: no_ic\n",
+      "X has shape (2414, 157), y has shape (2414,)\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 0.5}\n",
+      "Score of best estimator: 0.7820247901484069\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/final__CP__balanced__no_ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: final \n",
+      "Feature Type: CP \n",
+      "Balance Type: unbalanced \n",
+      "Dataset Type: ic\n",
+      "X has shape (2432, 157), y has shape (2432,)\n",
+      "Best parameters: {'C': 10.0, 'l1_ratio': 0.2}\n",
+      "Score of best estimator: 0.814474832382009\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/final__CP__unbalanced__ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: final \n",
+      "Feature Type: CP \n",
+      "Balance Type: unbalanced \n",
+      "Dataset Type: no_ic\n",
+      "X has shape (2414, 157), y has shape (2414,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.1}\n",
+      "Score of best estimator: 0.8048009212292164\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/final__CP__unbalanced__no_ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: final \n",
+      "Feature Type: DP \n",
+      "Balance Type: balanced \n",
+      "Dataset Type: ic\n",
+      "X has shape (2432, 1280), y has shape (2432,)\n",
+      "Best parameters: {'C': 10.0, 'l1_ratio': 0.5}\n",
+      "Score of best estimator: 0.7377136168480416\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/final__DP__balanced__ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: final \n",
+      "Feature Type: DP \n",
+      "Balance Type: balanced \n",
+      "Dataset Type: no_ic\n",
+      "X has shape (2414, 1280), y has shape (2414,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.2}\n",
+      "Score of best estimator: 0.7419637842169703\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/final__DP__balanced__no_ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: final \n",
+      "Feature Type: DP \n",
+      "Balance Type: unbalanced \n",
+      "Dataset Type: ic\n",
+      "X has shape (2432, 1280), y has shape (2432,)\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 1.0}\n",
+      "Score of best estimator: 0.7383705853823289\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/final__DP__unbalanced__ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: final \n",
+      "Feature Type: DP \n",
+      "Balance Type: unbalanced \n",
+      "Dataset Type: no_ic\n",
+      "X has shape (2414, 1280), y has shape (2414,)\n",
+      "Best parameters: {'C': 0.01, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.7502141303439436\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/final__DP__unbalanced__no_ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: final \n",
+      "Feature Type: CP_and_DP \n",
+      "Balance Type: balanced \n",
+      "Dataset Type: ic\n",
+      "X has shape (2432, 1437), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.30000000000000004}\n",
+      "Score of best estimator: 0.8336028672433612\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/final__CP_and_DP__balanced__ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: final \n",
+      "Feature Type: CP_and_DP \n",
+      "Balance Type: balanced \n",
+      "Dataset Type: no_ic\n",
+      "X has shape (2414, 1437), y has shape (2414,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.8424370409679673\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/final__CP_and_DP__balanced__no_ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: final \n",
+      "Feature Type: CP_and_DP \n",
+      "Balance Type: unbalanced \n",
+      "Dataset Type: ic\n",
+      "X has shape (2432, 1437), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.30000000000000004}\n",
+      "Score of best estimator: 0.8348844749097128\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/final__CP_and_DP__unbalanced__ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: final \n",
+      "Feature Type: CP_and_DP \n",
+      "Balance Type: unbalanced \n",
+      "Dataset Type: no_ic\n",
+      "X has shape (2414, 1437), y has shape (2414,)\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 1.0}\n",
+      "Score of best estimator: 0.8404295266998016\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/final__CP_and_DP__unbalanced__no_ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: final \n",
+      "Feature Type: CP_zernike_only \n",
+      "Balance Type: balanced \n",
+      "Dataset Type: ic\n",
+      "X has shape (2432, 30), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.30000000000000004}\n",
+      "Score of best estimator: 0.32973728928206814\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/final__CP_zernike_only__balanced__ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: final \n",
+      "Feature Type: CP_zernike_only \n",
+      "Balance Type: balanced \n",
+      "Dataset Type: no_ic\n",
+      "X has shape (2414, 30), y has shape (2414,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.2}\n",
+      "Score of best estimator: 0.31581072473817795\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/final__CP_zernike_only__balanced__no_ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: final \n",
+      "Feature Type: CP_zernike_only \n",
+      "Balance Type: unbalanced \n",
+      "Dataset Type: ic\n",
+      "X has shape (2432, 30), y has shape (2432,)\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 1.0}\n",
+      "Score of best estimator: 0.3716338098380602\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/final__CP_zernike_only__unbalanced__ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: final \n",
+      "Feature Type: CP_zernike_only \n",
+      "Balance Type: unbalanced \n",
+      "Dataset Type: no_ic\n",
+      "X has shape (2414, 30), y has shape (2414,)\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 1.0}\n",
+      "Score of best estimator: 0.363982191829136\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/final__CP_zernike_only__unbalanced__no_ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: final \n",
+      "Feature Type: CP_areashape_only \n",
+      "Balance Type: balanced \n",
+      "Dataset Type: ic\n",
+      "X has shape (2432, 55), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.4}\n",
+      "Score of best estimator: 0.4550582804938867\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/final__CP_areashape_only__balanced__ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: final \n",
+      "Feature Type: CP_areashape_only \n",
+      "Balance Type: balanced \n",
+      "Dataset Type: no_ic\n",
+      "X has shape (2414, 55), y has shape (2414,)\n",
+      "Best parameters: {'C': 10.0, 'l1_ratio': 0.8}\n",
+      "Score of best estimator: 0.4586510026162064\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/final__CP_areashape_only__balanced__no_ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: final \n",
+      "Feature Type: CP_areashape_only \n",
+      "Balance Type: unbalanced \n",
+      "Dataset Type: ic\n",
+      "X has shape (2432, 55), y has shape (2432,)\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 1.0}\n",
+      "Score of best estimator: 0.4736043362663639\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/final__CP_areashape_only__unbalanced__ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: final \n",
+      "Feature Type: CP_areashape_only \n",
+      "Balance Type: unbalanced \n",
+      "Dataset Type: no_ic\n",
+      "X has shape (2414, 55), y has shape (2414,)\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 1.0}\n",
+      "Score of best estimator: 0.47819186337627384\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/final__CP_areashape_only__unbalanced__no_ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: shuffled_baseline \n",
+      "Feature Type: CP \n",
+      "Balance Type: balanced \n",
+      "Dataset Type: ic\n",
+      "X has shape (2432, 157), y has shape (2432,)\n",
+      "Best parameters: {'C': 10.0, 'l1_ratio': 0.2}\n",
+      "Score of best estimator: 0.06563923718788009\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/shuffled_baseline__CP__balanced__ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: shuffled_baseline \n",
+      "Feature Type: CP \n",
+      "Balance Type: balanced \n",
+      "Dataset Type: no_ic\n",
+      "X has shape (2414, 157), y has shape (2414,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.0670928790764358\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/shuffled_baseline__CP__balanced__no_ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: shuffled_baseline \n",
+      "Feature Type: CP \n",
+      "Balance Type: unbalanced \n",
+      "Dataset Type: ic\n",
+      "X has shape (2432, 157), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.6000000000000001}\n",
+      "Score of best estimator: 0.10480702894285032\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/shuffled_baseline__CP__unbalanced__ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: shuffled_baseline \n",
+      "Feature Type: CP \n",
+      "Balance Type: unbalanced \n",
+      "Dataset Type: no_ic\n",
+      "X has shape (2414, 157), y has shape (2414,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 1.0}\n",
+      "Score of best estimator: 0.08965653619354413\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/shuffled_baseline__CP__unbalanced__no_ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: shuffled_baseline \n",
+      "Feature Type: DP \n",
+      "Balance Type: balanced \n",
+      "Dataset Type: ic\n",
+      "X has shape (2432, 1280), y has shape (2432,)\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 0.9}\n",
+      "Score of best estimator: 0.09779542157755523\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/shuffled_baseline__DP__balanced__ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: shuffled_baseline \n",
+      "Feature Type: DP \n",
+      "Balance Type: balanced \n",
+      "Dataset Type: no_ic\n",
+      "X has shape (2414, 1280), y has shape (2414,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.0934327767751746\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/shuffled_baseline__DP__balanced__no_ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: shuffled_baseline \n",
+      "Feature Type: DP \n",
+      "Balance Type: unbalanced \n",
+      "Dataset Type: ic\n",
+      "X has shape (2432, 1280), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.7000000000000001}\n",
+      "Score of best estimator: 0.10492237545617741\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/shuffled_baseline__DP__unbalanced__ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: shuffled_baseline \n",
+      "Feature Type: DP \n",
+      "Balance Type: unbalanced \n",
+      "Dataset Type: no_ic\n",
+      "X has shape (2414, 1280), y has shape (2414,)\n",
+      "Best parameters: {'C': 0.001, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.09428118673557857\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/shuffled_baseline__DP__unbalanced__no_ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: shuffled_baseline \n",
+      "Feature Type: CP_and_DP \n",
+      "Balance Type: balanced \n",
+      "Dataset Type: ic\n",
+      "X has shape (2432, 1437), y has shape (2432,)\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.08878523348993533\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/shuffled_baseline__CP_and_DP__balanced__ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: shuffled_baseline \n",
+      "Feature Type: CP_and_DP \n",
+      "Balance Type: balanced \n",
+      "Dataset Type: no_ic\n",
+      "X has shape (2414, 1437), y has shape (2414,)\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 0.6000000000000001}\n",
+      "Score of best estimator: 0.09891552442921327\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/shuffled_baseline__CP_and_DP__balanced__no_ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: shuffled_baseline \n",
+      "Feature Type: CP_and_DP \n",
+      "Balance Type: unbalanced \n",
+      "Dataset Type: ic\n",
+      "X has shape (2432, 1437), y has shape (2432,)\n",
+      "Best parameters: {'C': 0.01, 'l1_ratio': 0.1}\n",
+      "Score of best estimator: 0.10834210861793572\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/shuffled_baseline__CP_and_DP__unbalanced__ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: shuffled_baseline \n",
+      "Feature Type: CP_and_DP \n",
+      "Balance Type: unbalanced \n",
+      "Dataset Type: no_ic\n",
+      "X has shape (2414, 1437), y has shape (2414,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.5}\n",
+      "Score of best estimator: 0.10906171584228322\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/shuffled_baseline__CP_and_DP__unbalanced__no_ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: shuffled_baseline \n",
+      "Feature Type: CP_zernike_only \n",
+      "Balance Type: balanced \n",
+      "Dataset Type: ic\n",
+      "X has shape (2432, 30), y has shape (2432,)\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 0.8}\n",
+      "Score of best estimator: 0.04172328351179918\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/shuffled_baseline__CP_zernike_only__balanced__ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: shuffled_baseline \n",
+      "Feature Type: CP_zernike_only \n",
+      "Balance Type: balanced \n",
+      "Dataset Type: no_ic\n",
+      "X has shape (2414, 30), y has shape (2414,)\n",
+      "Best parameters: {'C': 10.0, 'l1_ratio': 0.4}\n",
+      "Score of best estimator: 0.0495008227090301\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/shuffled_baseline__CP_zernike_only__balanced__no_ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: shuffled_baseline \n",
+      "Feature Type: CP_zernike_only \n",
+      "Balance Type: unbalanced \n",
+      "Dataset Type: ic\n",
+      "X has shape (2432, 30), y has shape (2432,)\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 0.1}\n",
+      "Score of best estimator: 0.09026692924820426\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/shuffled_baseline__CP_zernike_only__unbalanced__ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: shuffled_baseline \n",
+      "Feature Type: CP_zernike_only \n",
+      "Balance Type: unbalanced \n",
+      "Dataset Type: no_ic\n",
+      "X has shape (2414, 30), y has shape (2414,)\n",
+      "Best parameters: {'C': 0.1, 'l1_ratio': 0.2}\n",
+      "Score of best estimator: 0.088438050329499\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/shuffled_baseline__CP_zernike_only__unbalanced__no_ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: shuffled_baseline \n",
+      "Feature Type: CP_areashape_only \n",
+      "Balance Type: balanced \n",
+      "Dataset Type: ic\n",
+      "X has shape (2432, 55), y has shape (2432,)\n",
+      "Best parameters: {'C': 10.0, 'l1_ratio': 0.4}\n",
+      "Score of best estimator: 0.055812102916436276\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/shuffled_baseline__CP_areashape_only__balanced__ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: shuffled_baseline \n",
+      "Feature Type: CP_areashape_only \n",
+      "Balance Type: balanced \n",
+      "Dataset Type: no_ic\n",
+      "X has shape (2414, 55), y has shape (2414,)\n",
+      "Best parameters: {'C': 10.0, 'l1_ratio': 0.2}\n",
+      "Score of best estimator: 0.050640544801579424\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/shuffled_baseline__CP_areashape_only__balanced__no_ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: shuffled_baseline \n",
+      "Feature Type: CP_areashape_only \n",
+      "Balance Type: unbalanced \n",
+      "Dataset Type: ic\n",
+      "X has shape (2432, 55), y has shape (2432,)\n",
+      "Best parameters: {'C': 1.0, 'l1_ratio': 1.0}\n",
+      "Score of best estimator: 0.09679294323803672\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/shuffled_baseline__CP_areashape_only__unbalanced__ic.joblib\n",
+      "\n",
+      "Training model for: \n",
+      "Model Type: shuffled_baseline \n",
+      "Feature Type: CP_areashape_only \n",
+      "Balance Type: unbalanced \n",
+      "Dataset Type: no_ic\n",
+      "X has shape (2414, 55), y has shape (2414,)\n",
+      "Best parameters: {'C': 100.0, 'l1_ratio': 0.0}\n",
+      "Score of best estimator: 0.08719358715454925\n",
+      "\n",
+      "Saved trained model to models/multi_class_models/shuffled_baseline__CP_areashape_only__unbalanced__no_ic.joblib\n",
+      "\n"
      ]
     }
    ],
