--- a/3.evaluate_model/get_LOIO_probabilities.ipynb
+++ b/3.evaluate_model/get_LOIO_probabilities.ipynb
@@ -145,6 +145,7 @@
     "    model_type = model_components[0]\n",
     "    feature_type = model_components[1]\n",
     "    balance_type = model_components[2]\n",
+    "    # version of dataset used to train model (ic, no_ic)\n",
     "    dataset_type = model_components[3].replace(\".joblib\", \"\")\n",
     "\n",
     "    print(\n",
