--- a/3.evaluate_model/get_model_predictions.ipynb
+++ b/3.evaluate_model/get_model_predictions.ipynb
@@ -161,6 +161,7 @@
     "    model_type = model_components[0]\n",
     "    feature_type = model_components[1]\n",
     "    balance_type = model_components[2]\n",
+    "    # version of dataset used to train model (ic, no_ic)\n",
     "    dataset_type = model_components[3].replace(\".joblib\", \"\")\n",
     "    \n",
     "    # load features data from indexes and features dataframe\n",
