--- a/1.split_data/split_data.ipynb
+++ b/1.split_data/split_data.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Specify datasets, save path"
+    "## Specify datasets, test ratio, save path"
    ]
   },
   {
@@ -39,6 +39,9 @@
    "source": [
     "# datasets to split\n",
     "datasets = [\"ic\", \"no_ic\"]\n",
+    "\n",
+    "# ratio of data to be used for testing (ex 0.15 = 15%)\n",
+    "test_ratio = 0.15\n",
     "\n",
     "# make results dir for saving\n",
     "results_dir = pathlib.Path(\"indexes/\")\n",
@@ -84,9 +87,6 @@
     "    labeled_data_path = pathlib.Path(f\"../0.download_data/data/labeled_data__{dataset}.csv.gz\")\n",
     "    labeled_data = get_features_data(labeled_data_path)\n",
     "    print(f\"Dataset shape: {labeled_data.shape}\")\n",
-    "    \n",
-    "    # ratio of data to be used for testing (ex 0.15 = 15%)\n",
-    "    test_ratio = 0.15\n",
     "\n",
     "    # get indexes of training and testing data\n",
     "    training_data, testing_data = train_test_split(\n",
